add docker and docker compose and used minio s3 store using docker compose and stored the assests in server when normally deployed
